--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <title>Better Motherfucking Website</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body id="id1">
     <header>
+      <button type="button"
+      onclick="document.getElementById('id1').style.background = 'magenta'">
+      Click Me!</button>
       <h1>This is <em>still</em> a motherfucking website.</h1>
       <aside>And it's more fucking perfect than the last guy's.</aside>
     </header>
@@ -72,6 +75,6 @@
     <p>
       This page—that isn't a total fucking eyesore—was created by <a href="https://twitter.com/drew_mc">me</a>  with help from <a href="https://twitter.com/gabehammersmith">him</a>.
     </p>
-
+    <script src="main.js"></script>
   </body>
 </html>
