--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <title>Better Motherfucking Website</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body id="id1">
+  <body id="body">
     <header>
-      <button type="button"
-      onclick="document.getElementById('id1').style.background = 'magenta'">
-      Click Me!</button>
-      <h1>This is <em>still</em> a motherfucking website.</h1>
+      <button type="button" onclick="y(); green()">Mode Psychédélique!</button>
+      <h1 id="title">This is <em>still</em> a motherfucking website.</h1>
       <aside>And it's more fucking perfect than the last guy's.</aside>
     </header>
 
-    <h2>Seriously, it takes minimal fucking effort to improve this shit.</h2>
+    <h2 id="title">Seriously, it takes minimal fucking effort to improve this shit.</h2>
     <p>
       <strong>7 fucking declarations.</strong>
     </p>
